Update to poetry, django 5 e S3 bucket

--- a/{{ cookiecutter.project_slug }}/Dockerfile
+++ b/{{ cookiecutter.project_slug }}/Dockerfile
@@ -4,17 +4,20 @@ ENV PYTHONUNBUFFERED 1
 ENV VIRTUAL_PORT 8000
 EXPOSE 8000
 LABEL name="{{ cookiecutter.project_name }}"
-ENV BUILD_DEPS="git"
+
+ENV RUNTIME_DEPS="python3-pip"
+ENV BUILD_DEPS="git python3-dev build-essential pkg-config"
 ENV DEBUG="false"
 
 RUN mkdir /app
 WORKDIR /app
-COPY Pipfile Pipfile.lock /app/
-RUN apt-get update && apt install -y --no-install-recommends $BUILD_DEPS \
+COPY pyproject.toml poetry.lock /app/
+RUN apt-get update && apt install -y --no-install-recommends $RUNTIME_DEPS $BUILD_DEPS \
     && python3 -m pip install --upgrade pip setuptools wheel \
-    && pip3 install --no-cache-dir pipenv \
-    && pipenv install --system --deploy --clear \
-    && apt-get remove --purge -y $BUILD_PACKAGES \
+    && pip3 install --no-cache-dir poetry \
+    && poetry config virtualenvs.create false \
+    && poetry install \
+    && apt-get remove --purge -y $BUILD_DEPS \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 FROM base as app
