Add vscode and pre-commit config

--- a/{{ cookiecutter.project_slug }}/.vscode/settings.json
+++ b/{{ cookiecutter.project_slug }}/.vscode/settings.json
@@ -2,5 +2,6 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "pre-commit-helper.runOnSave": "all hooks",
+    "pre-commit-helper.runOnSaveRegex": "^(.*)\\.(py)$"
 }
