--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -18,7 +18,9 @@ django-render-block = "^0.9.2"
 gunicorn = "^21.2.0"
 psycopg2-binary = "^2.9.9"
 sentry-sdk = "^1.44.0"
+{% if cookiecutter.whitenoise_static %}
 whitenoise = "^6.6.0"
+{% endif %}
 {% if cookiecutter.enable_s3_storage %}
 django-storages = "^1.14.2"
 boto3 = "^1.34.74"
